# qlabmaker

./: Makefile  pyproject.toml  schema.yml
src/programweb/backend/: settings.py  urls.py
src/programweb/formats/en/: formats.py
src/programweb/programdesigner/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py
src/programweb/programdesigner/migrations/: 0001_initial.py  0002_talk_summary.py  0003_remove_talk_updated_date_talk_updated_at.py  0004_event_alter_speaker_title_program_programtalk_and_more.py  0005_programtalk_end_time_programtalk_start_time.py  0006_alter_programtalk_options_remove_programtalk_order.py  0007_alter_talk_summary.py  0008_alter_event_name_alter_speaker_name_and_more.py  0009_host.py
src/qlabmaker/: errata.txt  gfx.py  programdata.py  remoteqlab.py
