[project]
name = "qlabmaker"
version = "0.1.0"
description = ""
authors = [
    {name = "technocake",email = "robin.garen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-osc (>=1.9.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "qlabmaker"
packages = [{include = "qlabmaker", from = "src"}]