[project]
name = "qlabmaker"
version = "0.1.0"
description = ""
authors = [
    {name = "technocake",email = "robin.garen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-osc (>=1.9.3,<2.0.0)",
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-nested-admin (>=4.1.6,<5.0.0)",
    "mgjson (>=0.1.0b1,<0.2.0)",
    "djangorestframework-api-key (>=3.1.0,<4.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "qlabmaker"
packages = [{include = "qlabmaker", from = "src"}]